force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/DisputeFlag__c.field-meta.xml
<CustomField>
    <fullName>DisputeFlag__c</fullName>
    <label>Dispute Flag</label>
    <description>Type of dispute flagged</description>
    <inlineHelpText>Select the dispute reason if transaction is disputed</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Service Not Received</fullName>
            </value>
            <value>
                <fullName>Wrong Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>