force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/IsDisputed__c.field-meta.xml
<CustomField>
    <fullName>IsDisputed__c</fullName>
    <label>Is Disputed</label>
    <description>Indicates if transaction is disputed</description>
    <inlineHelpText>Check if customer has disputed this transaction</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>