force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/MerchantCity__c.field-meta.xml
<CustomField>
    <fullName>MerchantCity__c</fullName>
    <label>Merchant City</label>
    <description>City where merchant is located</description>
    <inlineHelpText>Enter the city where the transaction occurred</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>