force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/MerchantName__c.field-meta.xml
<CustomField>
    <fullName>MerchantName__c</fullName>
    <label>Merchant Name</label>
    <description>Name of merchant where transaction occurred</description>
    <inlineHelpText>Enter merchant name as it appears on statement</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>