force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/RunningBalance__c.field-meta.xml
<CustomField>
    <fullName>RunningBalance__c</fullName>
    <label>Running Balance</label>
    <description>Running balance after this transaction</description>
    <inlineHelpText>Balance after this transaction posts</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>